--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,13 @@
 name = "roaring"
 version = "0.0.1"
 authors = ["Wim Looman <ghostunderscore@gmail.com>"]
+description = "http://roaringbitmap.org for http://www.rust-lang.org"
+
+homepage = "https://github.com/Nemo157/roaring-rs"
+repository = "https://github.com/Nemo157/roaring-rs"
+
+readme = "README.md"
+keywords = ["roaring", "data structure", "bitmap"]
+
+license = "MIT"
+license-file = "LICENSE"
