--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,9 @@ deploy:
     all_branches: true
 
 after_deploy:
-  - git remote add github https://$GITHUB_TOKEN:x-oauth-basic@github.com/$TRAVIS_REPO_SLUG.git
+  - echo "machine github.com login $GITHUB_TOKEN password x-oauth-basic" >> ~/.netrc
+  - chmod 0600 ~/.netrc
+  - git remote add github https://github.com/$TRAVIS_REPO_SLUG.git
   - git fetch github gh-pages
   - git checkout -b gh-pages FETCH_HEAD
   - mv target/doc docs/$TRAVIS_TAG
