--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ rust:
   - beta
 sudo: false
 
+matrix:
+  fast_finish: true
+  allow_failures:
+    - nightly
+
 env:
   global:
     - secure: aOiqRRhbGw+r7P1PleSNKk5JTkItW/tQBYBhxGdJ7gN9KvlBHEmBHNd5Yl8AuE5R9W27Eo/BgtXIu09EMuND8cLr92b1P1ru1ebQMM+2FburF1y4psZakecSWAMDlF+km/cdES/AzIJ7dI1Fc4dGE/zNMuLLYEKmSDtVMHXucaI=
@@ -26,6 +31,7 @@ deploy:
   on:
     tags: true
     all_branches: true
+    rust: beta
 
 after_deploy:
   - cargo publish --token "$CRATES_IO_TOKEN"
