--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ deploy:
   on:
     tags: true
     all_branches: true
-    rust: beta
+    condition: "$TRAVIS_RUST_VERSION = beta"
 
 after_deploy:
   - cargo publish --token "$CRATES_IO_TOKEN"
