--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,11 @@
 
 name = "roaring"
 version = "0.3.1"
-authors = ["Wim Looman <ghostunderscore@gmail.com>"]
+authors = ["Wim Looman <!@nemo157.com>"]
 description = "http://roaringbitmap.org for http://www.rust-lang.org"
 
-documentation = "https://nemo157.github.io/roaring-rs"
-homepage = "https://github.com/Nemo157/roaring-rs"
+documentation = "https://nemo157.com/roaring-rs"
+homepage = "https://nemo157.com/roaring-rs"
 repository = "https://github.com/Nemo157/roaring-rs"
 
 readme = "README.md"
