--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "roaring"
-version = "0.3.2"
+version = "0.4.0"
 authors = ["Wim Looman <wim@nemo157.com>"]
 description = "http://roaringbitmap.org for http://www.rust-lang.org"
 
@@ -12,7 +12,7 @@ repository = "https://github.com/Nemo157/roaring-rs"
 readme = "README.md"
 keywords = ["roaring", "data-structure", "bitmap"]
 
-license = "MIT"
+license = "MIT/Apache-2.0"
 
 [dependencies]
 num = "*"
