--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,30 @@
 language: rust
+sudo: false
+cache: cargo
 rust:
   - nightly
   - beta
   - stable
-sudo: false
-
-matrix:
-  fast_finish: true
-  allow_failures:
-    - rust: nightly
 
 env:
   global:
     - secure: aOiqRRhbGw+r7P1PleSNKk5JTkItW/tQBYBhxGdJ7gN9KvlBHEmBHNd5Yl8AuE5R9W27Eo/BgtXIu09EMuND8cLr92b1P1ru1ebQMM+2FburF1y4psZakecSWAMDlF+km/cdES/AzIJ7dI1Fc4dGE/zNMuLLYEKmSDtVMHXucaI=
     - secure: "LWHxu0+RrnYebD3H+lRzky0ZBcBrX2t5U/NOcpePGegtscvSjHVHfg0NIAfv+JyC48Q3vym2gBsqj//AsrzkU9dq1ErgGHR2N6TurCYoEMKa0fpWdRFhBmh2kPjM/h2l3guoxqdtYAQmeKaSSBc3UZAJyKyyzmtVoiWoQowbSQM="
 
+before_script:
+  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly" ]]; then
+      cargo install clippy --force;
+    fi'
+
 script:
-  - cargo build --release --verbose
-  - cargo test --verbose
+  - cargo test
+  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly" ]]; then
+      cargo clippy -- -D warnings;
+    fi'
 
 before_deploy:
-  - cargo doc --verbose
-  - cargo package --verbose
+  - cargo doc
+  - cargo package
 
 deploy:
   provider: releases
@@ -32,7 +35,7 @@ deploy:
   on:
     tags: true
     all_branches: true
-    condition: "$TRAVIS_RUST_VERSION = beta"
+    condition: "$TRAVIS_RUST_VERSION = stable"
 
 after_deploy:
   - cargo publish --token "$CRATES_IO_TOKEN"
