--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
 env:
   global:
     - secure: aOiqRRhbGw+r7P1PleSNKk5JTkItW/tQBYBhxGdJ7gN9KvlBHEmBHNd5Yl8AuE5R9W27Eo/BgtXIu09EMuND8cLr92b1P1ru1ebQMM+2FburF1y4psZakecSWAMDlF+km/cdES/AzIJ7dI1Fc4dGE/zNMuLLYEKmSDtVMHXucaI=
-    - secure: QRaXkP2OkP9KIwN/ifxclkKUhifeu2pGE6jEkNr/8kluxPDPplX3QtR/qwYzt6v24QsAW+rGvA0atB3yIiiWRrxxq3DcrV5v4xpc6ZoqFJYxVfnPqMGqDkh0pV1+6Z9RP9upP1ol3eOWnHPK0EHSH8sBAWENxE9k0WcilgjHxeo=
+    - secure: "LWHxu0+RrnYebD3H+lRzky0ZBcBrX2t5U/NOcpePGegtscvSjHVHfg0NIAfv+JyC48Q3vym2gBsqj//AsrzkU9dq1ErgGHR2N6TurCYoEMKa0fpWdRFhBmh2kPjM/h2l3guoxqdtYAQmeKaSSBc3UZAJyKyyzmtVoiWoQowbSQM="
 
 script:
   - cargo build --release --verbose
