--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: rust
 sudo: false
 cache: cargo
 rust:
-  - 1.11.0
+  - 1.17.0
   - stable
   - beta
   - nightly
@@ -13,13 +13,13 @@ env:
     - secure: "LWHxu0+RrnYebD3H+lRzky0ZBcBrX2t5U/NOcpePGegtscvSjHVHfg0NIAfv+JyC48Q3vym2gBsqj//AsrzkU9dq1ErgGHR2N6TurCYoEMKa0fpWdRFhBmh2kPjM/h2l3guoxqdtYAQmeKaSSBc3UZAJyKyyzmtVoiWoQowbSQM="
 
 before_script:
-  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly" ]]; then
-      rustup component add --toolchain nightly clippy;
+  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "stable" ]]; then
+      rustup component add clippy;
     fi'
 
 script:
   - cargo test
-  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "nightly" ]]; then
+  - bash -c 'if [[ "$TRAVIS_RUST_VERSION" == "stable" ]]; then
       cargo clippy -- -D warnings;
     fi'
 
