--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/Nemo157/roaring-rs"
 readme = "README.md"
 keywords = ["roaring", "data-structure", "bitmap"]
 categories = ["data-structures"]
+edition = "2018"
 
 license = "MIT/Apache-2.0"
 
@@ -18,3 +19,10 @@ travis-ci = { repository = "Nemo157/roaring-rs" }
 
 [dependencies]
 byteorder = "1.0"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "lib"
+harness = false
