--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,14 @@ license = "MIT/Apache-2.0"
 travis-ci = { repository = "Nemo157/roaring-rs" }
 
 [dependencies]
+bytemuck = { version = "1.5.0", features = ["extern_crate_alloc"] }
 byteorder = "1.0"
 
 [dev-dependencies]
 criterion = "0.3"
 quickcheck = "0.9"
 quickcheck_macros = "0.9"
+rand = "0.8.3"
 
 [[bench]]
 name = "lib"
