--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ travis-ci = { repository = "Nemo157/roaring-rs" }
 [dependencies]
 bytemuck = { version = "1.5.0", features = ["extern_crate_alloc"] }
 byteorder = "1.0"
+once_cell = "1.5.2"
 
 [dev-dependencies]
 criterion = "0.3"
