Use the retain_mut external library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ travis-ci = { repository = "Nemo157/roaring-rs" }
 [dependencies]
 bytemuck = "1.5.1"
 byteorder = "1.0"
+retain_mut = "0.1.2"
 
 [dev-dependencies]
 criterion = "0.3"
