Introduce a build script for the new benchmarks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 name = "roaring"
 version = "0.7.0"
 authors = ["Wim Looman <wim@nemo157.com>", "Kerollmops <kero@meilisearch.com>"]
-description = "http://roaringbitmap.org : A better compressed bitset - pure Rust implementation "
+description = "http://roaringbitmap.org: A better compressed bitset - pure Rust implementation "
 
-documentation = "https://nemo157.com/roaring-rs"
-repository = "https://github.com/Nemo157/roaring-rs"
+documentation = "https://docs.rs/roaring-rs"
+repository = "https://github.com/Roaringbitmap/roaring-rs"
 
 readme = "README.md"
 keywords = ["roaring", "data-structure", "bitmap"]
@@ -13,9 +13,6 @@ categories = ["data-structures"]
 edition = "2018"
 
 license = "MIT/Apache-2.0"
-
-[badges]
-travis-ci = { repository = "Nemo157/roaring-rs" }
 
 [dependencies]
 bytemuck = "1.5.1"
@@ -26,6 +23,13 @@ retain_mut = "0.1.2"
 criterion = "0.3"
 quickcheck = "0.9"
 quickcheck_macros = "0.9"
+
+[build-dependencies]
+anyhow = "1.0"
+bytes = "1.0"
+convert_case = "0.4"
+reqwest = { version = "0.11.3", features = ["blocking", "rustls-tls"], default-features = false }
+zip = "0.5.12"
 
 [[bench]]
 name = "lib"
