--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,11 @@ jobs:
 
       - uses: actions-rs/cargo@v1
         with:
+          command: test
+          args: --manifest-path benchmarks/Cargo.toml
+
+      - uses: actions-rs/cargo@v1
+        with:
           command: fmt
           args: -- --check
 
