--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,5 +46,10 @@ jobs:
 
       - uses: actions-rs/cargo@v1
         with:
+          command: fmt
+          args: --manifest-path benchmarks/Cargo.toml -- --check
+
+      - uses: actions-rs/cargo@v1
+        with:
           command: clippy
           args: --all-targets -- -D warnings
