--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,20 +36,8 @@ jobs:
 
       - uses: actions-rs/cargo@v1
         with:
-          toolchain: nightly
-          command: test
-          args: --all-features
-
-      - uses: actions-rs/cargo@v1
-        with:
           command: test
           args: --benches --manifest-path benchmarks/Cargo.toml
-
-      - uses: actions-rs/cargo@v1
-        with:
-          toolchain: nightly
-          command: test
-          args: --all-features --benches --manifest-path benchmarks/Cargo.toml
 
       - uses: actions-rs/cargo@v1
         with:
@@ -65,3 +53,28 @@ jobs:
         with:
           command: clippy
           args: --all-targets -- -D warnings
+  simd:
+    name: SIMD Feature
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+          components: rustfmt, clippy
+
+      - uses: actions-rs/cargo@v1
+        with:
+          toolchain: nightly
+          command: test
+          args: --features "simd"
+
+      - uses: actions-rs/cargo@v1
+        with:
+          toolchain: nightly
+          command: test
+          args: --features "simd" --benches --manifest-path benchmarks/Cargo.toml
