add PR hook to ci

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,9 @@ on:
     branches:
       - staging
       - trying
+  pull_request:
+    branches:
+      - master
 
 name: Continuous integration
 
