cleanup benchmark dependencies

--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -10,13 +10,11 @@ publish = false
 roaring = { path = ".." }
 
 [dev-dependencies]
-once_cell = "1.9.0"
-git2 = "0.13.25"
-zip = "0.5.13"
-indicatif = "0.16.2"
+once_cell = "1.9"
+git2 = { version = "0.13", default-features = false }
+zip = { version = "0.5", default-features = false, features = ["deflate"] }
+indicatif = "0.16"
 criterion = { version = "0.3", features = ["html_reports"] }
-quickcheck = "0.9"
-quickcheck_macros = "0.9"
 
 [features]
 simd = ["roaring/simd"]
