--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ simd = []
 
 [dev-dependencies]
 proptest = { version = "1.0.0" }
+arbitrary = { version = "1", features = ["derive"] }
 
 [profile.test]
 opt-level = 2
