--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -92,6 +92,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
+          args: --features serde
 
       - name: Test benchmarks
         uses: actions-rs/cargo@v1
