--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,9 @@ simd = []
 serde = ["dep:serde"]
 
 [dev-dependencies]
-proptest = { version = "1.0.0" }
+proptest = "1.0.0"
+serde_json = "1.0.85"
+bincode = "1.3.3"
 
 [profile.test]
 opt-level = 2
