--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,19 +16,20 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-bytemuck = "1.7.3"
-byteorder = { version = "1.4.3", default-features = false }
-serde = { version = "1.0.139", optional = true }
+bytemuck = { version = "1.7", optional = true }
+byteorder = { version = "1.4", optional = true }
+serde = { version = "1.0", optional = true }
 
 [features]
 default = ["std"]
+serde = ["dep:serde", "std"]
 simd = []
-std = ["byteorder/std"]
+std = ["dep:bytemuck", "dep:byteorder"]
 
 [dev-dependencies]
-proptest = "1.2.0"
-serde_json = "1.0.85"
-bincode = "1.3.3"
+proptest = "1.2"
+serde_json = "1.0"
+bincode = "1.3"
 
 [profile.test]
 opt-level = 2
