--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,35 +1,22 @@
-[package]
-name = "roaring"
-version = "0.10.6"
-rust-version = "1.65.0"
-authors = ["Wim Looman <wim@nemo157.com>", "Kerollmops <kero@meilisearch.com>"]
-description = "A better compressed bitset - pure Rust implementation"
+[workspace]
+members = ["roaring", "benchmarks"]
+resolver = "2"
 
-documentation = "https://docs.rs/roaring"
-repository = "https://github.com/RoaringBitmap/roaring-rs"
+[workspace.dependencies]
+roaring = { path = "roaring" }
 
-readme = "README.md"
-keywords = ["roaring", "data-structure", "bitmap"]
-categories = ["data-structures"]
-edition = "2021"
-
-license = "MIT OR Apache-2.0"
-
-[dependencies]
-bytemuck = { version = "1.16.1", optional = true }
-byteorder = { version = "1.5.0", optional = true }
-serde = { version = "1.0.203", optional = true }
-
-[features]
-default = ["std"]
-serde = ["dep:serde", "std"]
-simd = []
-std = ["dep:bytemuck", "dep:byteorder"]
-
-[dev-dependencies]
-proptest = "1.5.0"
-serde_json = "1.0.120"
 bincode = "1.3.3"
+bytemuck = "1.16.1"
+byteorder = "1.5.0"
+criterion = "0.3"
+git2 = { version = "0.19", default-features = false }
+indicatif = "0.17"
+itertools = "0.13"
+once_cell = "1.9"
+proptest = "1.5.0"
+serde = "1.0.203"
+serde_json = "1.0.120"
+zip = { version = "0.6", default-features = false }
 
 [profile.test]
 opt-level = 2
