--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,6 +41,22 @@ jobs:
           override: true
           components: rustfmt, clippy
 
+      - name: Install miri
+        uses: actions-rs/toolchain@v1
+        if: matrix.rust == 'nightly'
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+          components: miri
+
+      - name: miri setup
+        uses: actions-rs/cargo@v1
+        if: matrix.rust == 'nightly'
+        with:
+          command: miri
+          args: setup
+
       - name: Fetch
         uses: actions-rs/cargo@v1
         with:
@@ -70,16 +86,9 @@ jobs:
           command: test
           args: --features serde
 
-      - name: miri setup
-        if: matrix.rust == 'nightly'
-        uses: actions-rs/cargo@v1
-        with:
-          command: miri
-          args: setup
-
       - name: Test bit endian
-        if: matrix.rust == 'nightly'
         uses: actions-rs/cargo@v1
+        if: matrix.rust == 'nightly'
         with:
           command: miri
           args: test --target s390x-unknown-linux-gnu --package roaring --lib -- bitmap::serialization::test::test_from_lsb0_bytes
