--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,19 +33,17 @@ jobs:
           components: rustfmt, clippy
 
       - name: Check
-        working-directory: roaring
         # clippy will also do a build check
         # so we don't need to run `cargo check` or `cargo build`
         # use different features to check if everything is fine
         # the incremental compilation will make this faster
         run: |
-          cargo clippy --all-targets --no-default-features -- -D warnings
-          cargo clippy --all-targets --features serde -- -D warnings
+          cargo clippy -p roaring --all-targets --no-default-features -- -D warnings
+          cargo clippy -p roaring --all-targets --features serde -- -D warnings
 
       - name: Check SIMD
         if: matrix.rust == 'nightly'
-        working-directory: roaring
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo clippy -p roaring --all-targets --all-features -- -D warnings
 
       - name: Check formatting
         run: cargo fmt --all -- --check
@@ -80,18 +78,15 @@ jobs:
 
       - name: Test
         if: matrix.features == 'default'
-        working-directory: roaring
-        run: cargo test --features serde
+        run: cargo test -p roaring --features serde
 
       - name: Test no default features
         if: matrix.features == 'no-std'
-        working-directory: roaring
-        run: cargo test --no-default-features
+        run: cargo test -p roaring --no-default-features
 
       - name: SIMD test
         if: matrix.rust == 'nightly' && matrix.features == 'simd'
-        working-directory: roaring
-        run: cargo +nightly test --features simd
+        run: cargo +nightly test -p roaring --features simd
 
   miri:
     runs-on: ubuntu-latest
@@ -114,7 +109,7 @@ jobs:
         run: cargo miri setup
 
       - name: Test bit endian
-        run: cargo miri test --target s390x-unknown-linux-gnu --package roaring --lib -- bitmap::serialization::test::test_from_lsb0_bytes
+        run: cargo miri test --target s390x-unknown-linux-gnu -p roaring --lib -- bitmap::serialization::test::test_from_lsb0_bytes
 
   bench:
     runs-on: ubuntu-latest
