fix: change `package.rust-version` in `roaring/Cargo.toml`
Changes the MSRV of the roaring crate in the Cargo.toml to reflect the
change to the MSRV in the ci.
Also adds warning comments, so future changes to either hopefully stay
in sync.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,8 @@ jobs:
           - stable
           - beta
           - nightly
+          # When changing this value don't forget to change the `package.rust-version` field in
+          # `roaring/Cargo.toml`!!!
           - 1.80.1
     env:
       RUSTFLAGS: "-C target-cpu=native -C opt-level=3"
