Support allocative with `features = ["allocative"]`
Allocative is a trait that lets you trace allocations.
This gives you insight similar to `RoaringBitmap::statistics()`, but
built-in to larger allocative traces of arbitrary data structures.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ proptest = "1.6.0"
 serde = "1.0.217"
 serde_json = "1.0.138"
 zip = { version = "0.6", default-features = false }
+allocative = { version = "0.3" }
 
 [profile.test]
 opt-level = 2
