--- a/roaring/Cargo.toml
+++ b/roaring/Cargo.toml
@@ -20,12 +20,14 @@ license = "MIT OR Apache-2.0"
 bytemuck = { workspace = true, optional = true }
 byteorder = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
+allocative = { workspace = true, optional = true }
 
 [features]
 default = ["std"]
 serde = ["dep:serde", "std"]
 simd = []
 std = ["dep:bytemuck", "dep:byteorder"]
+allocative = ["dep:allocative"]
 
 [dev-dependencies]
 proptest = { workspace = true }
